--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ li {
         none;
 }
 
+.bg.grey {
+    background-color: grey;
+}
+
 /* header */
 
 header {
@@ -71,5 +75,24 @@ header {
 .header-buttons {
     min-height: 340px;
     background-color: pink;
-    width: 600px;
+    width: 500px;
+}
+
+/* first-section */
+
+.server-section {
+    min-height: 400px;
+    padding: 50px 0;
+}
+
+.image-left {
+    height: 400px;
+    width: 60%;
+    background-color: lightblue;
+}
+
+.text-right {
+    height: 400px;
+    width: 40%;
+    background-color: pink;
 }
