--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ li {
     background-color: lightgrey;
 }
 
+.bg-pink {
+    background-color: pink;
+}
+
 /* header */
 
 header {
@@ -75,7 +79,7 @@ header {
 .header-buttons {
     min-height: 340px;
     background-color: pink;
-    width: 500px;
+    width: 700px;
 }
 
 /* first-section */
@@ -108,4 +112,46 @@ header {
 .main-box {
     height: 700px;
     background-color: green;
+}
+
+/* footer */
+footer {
+    background-color: #23272A;
+}
+
+.footer-nav {
+    min-height: 600px;
+    padding: 50px 0;
+
+}
+
+.footer-nav div {
+    min-height: 300px;
+
+}
+
+.left-col {
+    background-color: pink;
+    width: 40%;
+}
+
+.right-col {
+    background-color: #4BB2AA;
+    width: 15%;
+}
+
+/* footer buttons */
+
+.footer-buttons {
+    min-height: 50px;
+    border-top: 1px solid white;
+    padding: 20px 0;
+
+}
+
+.footer-cont {
+    min-height: 50px;
+    background-color: aquamarine;
+    justify-content: space-between;
+    align-items: center;
 }
